--- a/servidor_minecraft/config/voicechat/voicechat-server.properties
+++ b/servidor_minecraft/config/voicechat/voicechat-server.properties
@@ -6,11 +6,11 @@
 # Set this to '-1' to use the same port number that is used by the Minecraft server.
 # However, it is strongly recommended NOT to use the same port number because UDP on
 # it is also used by default for the server query. Doing so may crash the server!
-port=24454
+port=4490
 # The server IP address to bind the voice chat to
 # Leave blank to use the 'server-ip' property from the 'server.properties' config file
 # To bind to the wildcard IP address, use '*'
-bind_address=147.185.221.23:27199
+bind_address=
 # The distance to which the voice can be heard
 max_voice_distance=48.0
 # The multiplier of the voice distance when crouching
